# simplicity

./: .gitignore  LICENSE  README.md  install.bat  install.sh  pyproject.toml  update.bat  update.sh
examples/: get_datetime.py
simplicity/: __init__.py  __main__.py  auth.py  chat.py  cli.py  client.py  config.py  discord_connector.py  display.py  providers.py  tools.py  webui.py
workspace/: README.md
